--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
 *$py.class
 
@@ -20,32 +22,113 @@ parts/
 sdist/
 var/
 wheels/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
+
+*.manifest
+*.spec
+
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Testing
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Localization
+*.mo
+*.pot
+
+# Logs
+*.log
+
+# OS-specific files
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Project-specific directories
+instance/
+.webassets-cache
+
+.scrapy
+
+docs/_build/
+
+.pybuilder/
+target/
+
+.ipynb_checkpoints
+
+profile_default/
+ipython_config.py
+
+.pdm.toml
+
+__pypackages__/
+
+celerybeat-schedule
+celerybeat.pid
+
+*.sage.py
 
 # Virtual environments
+.env
+.venv
+env/
 venv/
 ENV/
-env/
+env.bak/
+venv.bak/
+
+# IDE-specific files
+.spyderproject
+.spyproject
+
+.ropeproject
+
+/site
+
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+.pyre/
+
+.pytype/
+
+.cython_debug/
+
+# Data files - DO NOT COMMIT
+data/
+*.csv
+*.xlsx
+*.xls
+*.pdf
+*_backup_*.csv
+clean_data*.csv
+month.csv
+done*.csv
+updateddone.csv
+2082.csv
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Data files (optional - remove if you want to track data)
-*.csv
-*.xlsx
-*.xls
-*.xlsm
-*_backup_*.csv
-
-# Logs
-*.log
+*~
